--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,8 @@
 .container {
-  height: 100vh;
-  width: 100vw;
+  height: 100%;
+  width: 100%;
   display: grid;
+  grid-template-rows: 5vh 90vh 5vh;
   background-color: aquamarine;
   
 }
