--- a/src/components/Footer.module.css
+++ b/src/components/Footer.module.css
@@ -1,5 +1,7 @@
 .footer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     background-color: green;
-    width: auto;
-    height: 3rem;
+      
 }
