--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -1,5 +1,5 @@
 .header {
-    background-color: red;
+    background-color: mediumorchid;
     display: flex;
     align-items: center;
     justify-content: center;
