--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,17 @@
   height: 100%;
   width: 100%;
   display: grid;
-  grid-template-rows: 5vh 90vh 5vh;
-  background-color: aquamarine;
+  grid-template-rows: 4vh 92vh 4vh;
+  background-color: white;
   
+}
+
+@media (max-width: 768px) {
+  html {
+      font-size: 87.5%;
+  }
+  
+  .wrapper {
+      grid-template-columns: 1fr;
+  }
 }
